Optimised legibility for text rendering. p font size. footer size. h2 sizes. description text colour. project titles for mobile centered. contact section overlay overlay fixed. mail contact bigger

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 400;
 	text-shadow: none;
+  	text-rendering: optimizeLegibility;
+
 
 	overflow: hidden;
 
@@ -41,11 +43,11 @@ body {
 }
 
 p {
-	font-size: 16px;
+	font-size: 18px;
 	font-style: normal;
 	font-weight: normal;
 	line-height: 1.9em;
-	letter-spacing: 0.05em;
+	letter-spacing: -0.01em;
 	max-width: 850px;
 	margin: 0 auto;
 }
@@ -245,7 +247,7 @@ list-style-type: none;
 
 .footer {
 	width: 100%;
-	height: 50px;
+	height: 75px;
 	background-color: #252525;
 	display: table;
 	margin: 0 auto;
@@ -260,7 +262,7 @@ list-style-type: none;
 .footer-credits {
 	text-align: center;
 	vertical-align: middle;
-	font-size: 11px;
+	font-size: 12px;
 	color: #6d6d6d;
 	display: table-cell;
 	padding-left: 50px;
@@ -329,7 +331,7 @@ list-style-type: none;
 	line-height: 1em;
 	padding-bottom: 25px;
 	letter-spacing: -1px;
-
+	
 	-webkit-transition: all .3s ease-in;
 	-moz-transition: all .3s ease-in;
 	-o-transition: all .3s ease-in;
@@ -382,12 +384,13 @@ list-style-type: none;
 }
 
 .h2{
-	font-size: 30px;
-	text-align: center;
+	font-size: 55px;
+	letter-spacing: -0.03em;
+  	text-align: center;
 }
 
 @media (max-width: 768px) {
-	.h2 { font-size: 24px; }
+	.h2 { font-size: 30px; }
 }
 
 
@@ -424,6 +427,7 @@ list-style-type: none;
 .description-about {
 	margin-top: 41px;
 	display: table;
+	color: #3D3D3D;
 }
 
 .about-text {
@@ -432,7 +436,7 @@ list-style-type: none;
 }
 
 .about-image {
-	margin-top: 50px;
+	margin-top: 12px;
 	margin-right: 50px;
 	float: left;
 	width: 50%;
@@ -445,7 +449,8 @@ list-style-type: none;
 	.description-about { margin-top: 46px;}
 }
 @media (min-width: 1200px) {
-	.description-about { margin-top: 7%;}
+	.description-about { margin-top: 85px;}
+	.about-image {margin-top: 50px;}
 }
 
 @media (min-width: 768) {
@@ -751,7 +756,7 @@ list-style-type: none;
 	.thumb { width: 100%; height: 250px; margin-right: 0px; margin-left: 0px; margin-bottom: 30px; margin-top: 0px; }
 
 	.info-thumb {top: 122px;height: 4em;}
-	.title-work {padding-top: 10px;}
+	.title-work {padding: 22px 0;text-align: center; float: none; margin: 0 auto;}
 }
 
 
@@ -788,6 +793,7 @@ list-style-type: none;
 .experience-text {
 	width: 100%;
 	margin: 0 auto;
+	color: #3D3D3D;
 }
 
 @media (min-width: 1650px) {
@@ -954,6 +960,7 @@ list-style-type: none;
 }
 
 .contact-content {
+	position: relative;
 	width: 60%;
 	margin: 0 auto;
 	padding-top: 90px;
@@ -974,15 +981,20 @@ list-style-type: none;
 
 .mail-contact {
 	font-family: 'Copernicus'; 
-	font-size: 26px;
+	font-size: 50px;
 	font-style: italic;
 	text-align: center;
 	vertical-align: middle;
-	letter-spacing: .1em;
+	letter-spacing: .01em;
+}
+
+@media (min-width: 451px) and (max-width: 650px) {
+	.mail-contact { font-size: 40px; }
+
 }
 
 @media (max-width: 450px) {
-	.mail-contact { font-size: 20px; }
+	.mail-contact { font-size: 30px; }
 }
 
 .title-animation {
